--- a/Cupcake/pom.xml
+++ b/Cupcake/pom.xml
@@ -22,6 +22,20 @@
             <version>5.6.1</version>
         </dependency>
 
+        <!-- API Fix -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.0</version>
+        </dependency>
+
+        <!-- BCrypt -->
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+
         <!-- Javalin Rendering -->
         <dependency>
             <groupId>io.javalin</groupId>
